--- a/ear-codi/ear-codi-web-one/src/main/webapp/index.xhtml
+++ b/ear-codi/ear-codi-web-one/src/main/webapp/index.xhtml
@@ -19,7 +19,7 @@
                 <li>Mark all the CODI dependencies as provided in the webapp pom.xml (you can uncomment the lines that i added) </li>
                 <li>Add the CODI dependecies in the ear pom.xml and mark as compile/runtime (you can uncomment the lines that i added)</li>
                 <li>Try to run the server you will see:  SEVERE - CDI Beans module deployment failed java.lang.IllegalArgumentException: /testView.xhtml is already mapped to /testView.xhtml via com.maxtorzito.test.TestView -> a further view definition (com.maxtorzito.test.TestView) is invalid</li>
-                <li>Try access to localhost:8080/testView.xhtml and you will see the NULL in  initview and prerenderview messages, 
+                <li>Try access to localhost:8080 and you will see the NULL in  initview and prerenderview messages, 
                     this is because those annotated method never get called (are ignored) when the dependency is in the ear</li>
             </ol>
 
